launchpad-buildd (209) UNRELEASED; urgency=medium

  * Upgrade charm to bionic and Python 3.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 10 Feb 2022 09:27:28 +0000

launchpad-buildd (208) bionic; urgency=medium

  [ Jürgen Gmach ]
  * Adjust updated command line option for the CI runner.
  * Publish documentation on Read the Docs. 

  [ Colin Watson ]
  * Rename BUILDD_SLAVE_CONFIG environment variable to BUILDD_CONFIG.

 -- Jürgen Gmach <juergen.gmach@canonical.com>  Wed, 09 Feb 2022 13:52:46 +0000

launchpad-buildd (207) bionic; urgency=medium

  * Return results from individual CI jobs.
  * Support CI pipeline stages with multiple jobs.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 03 Feb 2022 10:40:58 +0000

launchpad-buildd (206) bionic; urgency=medium

  * Fix flake8 violations.
  * Refactor extra status handling to be common to all build types.
  * Fix handling of empty output in Backend.find.
  * Add CI job support.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 11 Jan 2022 16:26:40 +0000

launchpad-buildd (205) bionic; urgency=medium

  * Ignore NotAutomatic flag for -proposed and -backports (LP: #1016776).
  * Use brz-build-daily-recipe rather than "bzr -Derror dailydeb" if the
    former exists (see LP #1943292).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 03 Dec 2021 23:15:48 +0000

launchpad-buildd (204) bionic; urgency=medium

  * Configure apt to automatically retry downloads on failures
    (LP: #1949473).
  * Configure apt to always include phased updates, even if running in LXD
    containers (LP: #1949769).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 09 Nov 2021 21:50:17 +0000

launchpad-buildd (203) bionic; urgency=medium

  * Remove some more "slave" terminology from tests.
  * Add SNAPPY_STORE_NO_CDN=1 to the environment in more places when using a
    builder proxy (LP: #1945712).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 08 Oct 2021 14:45:06 +0100

launchpad-buildd (202) bionic; urgency=medium

  [ Thomas Bechtold ]