@@ -8,7 +8,6 @@ dist
 debian/debhelper-build-stamp
 debian/files
 debian/launchpad-buildd
-debian/python-lpbuildd
 debian/python3-lpbuildd
 debian/tmp
 debian/*.debhelper.log
