@@ -9,7 +9,7 @@ export PATH=/usr/bin:/bin:/usr/sbin:/sbin:${PATH}
 
 NTPDATE=ntpdate
 SUDO=sudo
-PACKAGES="launchpad-buildd python-lpbuildd python3-lpbuildd sbuild bzr-builder bzr git-build-recipe git dpkg-dev python-debian python3-debian"
+PACKAGES="launchpad-buildd python3-lpbuildd sbuild bzr-builder bzr git-build-recipe git dpkg-dev python3-debian"
 KERNEL=$(uname -snrvm)
 
 echo "Kernel version: $KERNEL"
