@@ -13,25 +13,6 @@ Build-Depends: apt-utils,
                dh-python,
                git,
                intltool,
-               python (>= 2.6.6-3~),
-               python-apt,
-               python-debian,
-               python-fixtures,
-               python-mock,
-               python-netaddr,
-               python-pylxd,
-               python-requests,
-               python-responses,
-               python-setuptools,
-               python-six,
-               python-systemfixtures,
-               python-testtools,
-               python-twisted,
-               python-txfixtures,
-# We don't use the bits of pylxd that require this at run-time, but at
-# build-time pybuild fails if it's not available.
-               python-ws4py,
-               python-zope.interface,
                python3 (>= 3.3),
                python3-apt,
                python3-debian,
@@ -44,7 +25,7 @@ Build-Depends: apt-utils,
                python3-six,
                python3-systemfixtures,
                python3-testtools,
-               python3-twisted,
+               python3-twisted (>= 16.4.0),
                python3-txfixtures,
 # We don't use the bits of pylxd that require this at run-time, but at
 # build-time pybuild fails if it's not available.
@@ -68,9 +49,9 @@ Depends: adduser,
          lxd,
          ntpdate,
          pristine-tar,
-         ${lpbuildd-python-prefix},
-         ${lpbuildd-python-prefix}-apt,
-         ${lpbuildd-python-prefix}-lpbuildd (= ${source:Version}),
+         python3,
+         python3-apt,
+         python3-lpbuildd (= ${source:Version}),
          sbuild,
          schroot,
          sudo,
@@ -83,23 +64,6 @@ Description: Launchpad buildd slave
  tell launchpad about the slave instance. If you are creating more than one
  slave instance on the same computer, be sure to give them independent configs
  and independent filecaches etc.
-
-Package: python-lpbuildd
-Section: python
-Architecture: all
-Depends: apt-utils,
-         procps,
-         python-apt,
-         python-netaddr,
-         python-pylxd,
-# Work around missing dependency in python-pbr.
-         python-setuptools,
-         ${misc:Depends},
-         ${python:Depends},
-Breaks: launchpad-buildd (<< 88)
-Replaces: launchpad-buildd (<< 88)
-Description: Python 2 libraries for a Launchpad buildd slave
- This contains the Python 2 libraries that control the Launchpad buildd slave.
 
 Package: python3-lpbuildd
 Section: python
