@@ -6,10 +6,7 @@ __metaclass__ = type
 import os
 import subprocess
 import tarfile
-try:
-    from unittest import mock
-except ImportError:
-    import mock
+from unittest import mock
 
 from fixtures import (
     EnvironmentVariable,
