@@ -4,10 +4,7 @@
 __metaclass__ = type
 
 import os
-try:
-    from unittest import mock
-except ImportError:
-    import mock
+from unittest import mock
 
 from fixtures import (
     EnvironmentVariable,
