@@ -5,21 +5,6 @@ dpkg-dev
 git
 intltool
 make
-python-apt
-python-debian
-python-fixtures
-python-mock
-python-netaddr
-python-pylxd
-python-requests
-python-responses
-python-setuptools
-python-six
-python-systemfixtures
-python-testtools
-python-twisted
-python-txfixtures
-python-zope.interface
 python3-apt
 python3-debian
 python3-fixtures
