@@ -1,6 +1,7 @@
 launchpad-buildd (209) UNRELEASED; urgency=medium
 
   * Upgrade charm to bionic and Python 3.
+  * Remove Python 2 support.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 10 Feb 2022 09:27:28 +0000
 
